--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+  background-color: black;
+}
+
+body {
+  font-family: Helvetica, sans-serif;
+  background-color: black;
 }
 
 @layer base {
@@ -70,3 +77,9 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+@supports (-webkit-touch-callout: none) {
+	.h-screen {
+	  height: -webkit-fill-available;
+	}
+  }
